# pyfreeform

./: .gitignore  LICENSE  README.md  mkdocs.yml  mkdocs_v2.yml  pyproject.toml  test_path_entity.py
.github/workflows/: docs.yml  publish.yml  test.yml
examples/: 01_quick_start.py  02_custom_dots.py  03_diagonal.py  04_patterns.py  05_connections.py  06_advanced.py  07_curves.py  08_transforms.py  09_polygons.py  10_showcase.py  11_groups.py  12_text.py  13_text_showcase.py  14_ellipses.py  15_parametric_paths.py  16_custom_paths.py  create_sample_image.py
site/: 404.html  index 2.html  index.html  regenerate_all_svgs.py  sitemap.xml
site/API_MIGRATION_GUIDE/: index.html
site/API_SURFACE/: index.html
site/DESIGN_FLOW/: index.html
site/MAINTAINING_SVG_EXAMPLES/: index.html
site/_css/: custom.css
site/_generator/: create_sample_images.py  generate_all.py
site/_generator/getting_started/: gen_02_first_artwork.py
site/_generator/guide/: gen_01_scenes_and_grids.py  gen_02_working_with_cells.py  gen_03_drawing_with_entities.py  gen_04_colors_styles_palettes.py  gen_05_paths_and_parametric.py  gen_06_shapes_and_polygons.py  gen_07_text_and_typography.py
site/_generator/home/: gen_index.py
site/_generator/recipes/: gen_02_geometric_patterns.py  gen_03_flowing_curves.py  gen_05_typographic_art.py  gen_06_advanced_compositions.py
site/advanced-concepts/: index.html
site/advanced-concepts/01-anchor-system/: index.html
site/advanced-concepts/02-connections/: index.html
site/advanced-concepts/03-pathable-protocol/: index.html
site/advanced-concepts/04-transforms/: index.html
site/advanced-concepts/05-fit-to-cell/: index.html
site/advanced-concepts/06-grid-selections/: index.html
site/advanced-concepts/_svg_generators/: 01_anchor_system_gen.py  02_connections_gen.py  04_transforms_gen.py  06_grid_selections_gen.py
site/api-reference/_svg_generators/: cell_gen.py  index.html  pathable_gen.py  scene_gen.py  transforms_gen.py  utilities_gen.py
site/api-reference/cell/: index.html
site/api-reference/grid/: index.html
site/api-surface/: index.html
site/developer-guide/: index.html
site/entities/: index 2.html
site/examples/: index.html
site/gallery/: index.html
site/getting-started/: index.html
site/guide/: index.html
site/recipes/: index.html
site/search/: search_index 2.json  search_index.json
src/pyfreeform/: __init__.py  color.py  display.py  gradient.py  layout.py
tests/: test_along.py  test_anchor_spec.py  test_animation.py  test_caps.py  test_color.py  test_connectable.py  test_entity.py  test_entity_group.py  test_features.py  test_gradients.py  test_image.py  test_layout.py  test_path_shapes.py  test_polygon.py  test_rect_bounds.py  test_relative.py  test_surface.py  test_transforms.py
wiki/: API_MIGRATION_GUIDE.md  API_SURFACE.md  DESIGN_FLOW.md  MAINTAINING_SVG_EXAMPLES.md  index.md
wiki/_css/: custom.css
wiki/_generator/: __init__.py  create_sample_images.py  generate_all.py
wiki/_includes/: abbreviations.md
wiki/advanced-concepts/: 01-anchor-system.md  02-connections.md  03-pathable-protocol.md  04-transforms.md  05-fit-to-cell.md  06-grid-selections.md  07-surface-protocol.md  README.md
wiki/api-reference/: animation.md  cell.md  connections.md  drawing.md  entities.md  grid-and-cells.md  grid.md  index.md  pathable.md  scene.md  styling.md  transforms.md  types.md  utilities.md
wiki/api-surface/: index.md
wiki/color-and-style/: 01-color-system.md  02-palettes.md  03-style-objects.md  04-creating-palettes.md
wiki/developer-guide/: 01-architecture.md  02-creating-entities.md  02-entity-system.md  03-creating-entities.md  03-pathable-protocol.md  04-internals.md  04-pathable-protocol.md  05-image-processing.md  06-contributing.md  index.md
wiki/entities/: 01-dots.md  02-lines.md  03-curves.md  04-ellipses.md  05-polygons.md  06-text.md  07-rectangles.md  08-entity-groups.md  README.md
wiki/examples/: index.md
wiki/fundamentals/: 01-scenes.md  02-grids-and-cells.md  03-entities.md  04-styling.md  05-layering.md
wiki/gallery/: index.md
wiki/getting-started/: 00-installation.md  01-installation.md  01-your-first-artwork.md  02-core-concepts.md  02-your-first-artwork.md  03-how-it-works.md  03-image-to-art.md  index.md
wiki/guide/: 01-scenes-and-grids.md  02-working-with-cells.md  03-drawing-with-entities.md  04-colors-styles-palettes.md  05-paths-and-parametric.md  06-shapes-and-polygons.md  07-text-and-typography.md  08-transforms-and-layout.md  09-connections-and-anchors.md  10-layout-alignment.md  11-gradients.md  12-animation.md  index.md
wiki/parametric-art/: 01-what-is-parametric.md  02-positioning-along-paths.md  03-bezier-mathematics.md  04-ellipse-mathematics.md  05-custom-paths.md  06-mathematical-reference.md
wiki/recipes/: 01-dot-art-from-images.md  01-image-to-art.md  02-geometric-patterns.md  02-halftone-effects.md  03-flowing-curves.md  04-connected-networks.md  04-geometric-patterns.md  05-connected-networks.md  05-typographic-art.md  06-advanced-compositions.md  06-rotating-shapes.md  07-hidden-gems.md  07-text-art.md  08-animated-art.md  08-arcs-and-sub-paths.md  index.md
wiki_v2/: DESIGN_FLOW.md  index.md
wiki_v2/_generator/: __init__.py
wiki_v2/api-surface/: index.md
wiki_v2/developer-guide/: 03-pathable-protocol.md
wiki_v2/gallery/: index.md
wiki_v2/getting-started/: 03-how-it-works.md
wiki_v2/guide/: 01-scenes-and-grids.md  03-drawing-with-entities.md  06-shapes-and-polygons.md  08-transforms-and-layout.md
wiki_v2/recipes/: 01-image-to-art.md  02-geometric-patterns.md  index.md
(+267 files in other folders)
