[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfreeform"
version = "0.3.0"
description = "A minimalist, art-focused Python drawing library with object-oriented design"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mathewe Banda" }
]
keywords = ["drawing", "art", "svg", "graphics", "creative-coding", "freeform", "generative-art"]
dependencies = [
    "numpy>=1.20",
    "Pillow>=9.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://github.com/MatheweB/pyfreeform"
Documentation = "https://matheweb.github.io/pyfreeform/"
Repository = "https://github.com/MatheweB/pyfreeform"
Issues = "https://github.com/MatheweB/pyfreeform/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocs-glightbox>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyfreeform"]

[tool.pytest.ini_options]
testpaths = ["tests"]
