[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfreeform"
version = "0.4.0"
description = "A minimalist, art-focused Python drawing library with object-oriented design"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mathewe Banda" }
]
keywords = ["drawing", "art", "svg", "graphics", "creative-coding", "freeform", "generative-art"]
dependencies = [
    "numpy>=1.20",
    "Pillow>=9.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://github.com/MatheweB/pyfreeform"
Documentation = "https://matheweb.github.io/pyfreeform/"
Repository = "https://github.com/MatheweB/pyfreeform"
Issues = "https://github.com/MatheweB/pyfreeform/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocs-glightbox>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyfreeform"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator (readability preference)
    "I001",   # import sorting (semantic grouping preferred)
    "W293",   # whitespace on blank lines (cosmetic)
    "W291",   # trailing whitespace (cosmetic)
    "RUF002", # ambiguous unicode in docstrings (intentional)
    "RUF003", # ambiguous unicode in comments (intentional)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports are intentional

[tool.ruff.lint.isort]
known-first-party = ["pyfreeform"]
